# 711robot

./: .gitignore  CMakeLists.txt  EtherCATRosController.workspace
SOEM/test/: somanet.cpp  step_motor.pdomap
src/: main.cpp
src/CartesianController/: CMakeLists.txt  package.xml
src/CartesianController/src/: test.cpp
src/TechControlInterface/: CMakeLists.txt  TechControlInterface.xml  package.xml
src/TechControlInterface/bringup/config/: TechJoints.yaml
src/TechControlInterface/bringup/launch/: launch.py  launch_controller.py  view.py
src/TechControlInterface/controller/: TechController.cpp  controller.cpp
src/TechControlInterface/controller/include/: TechController.hpp  controller.hpp
src/TechControlInterface/description/drive_xml/: tech_driver.yaml
src/TechControlInterface/description/ros2_control/: TechJoints.ros2_control.xacro
src/TechControlInterface/description/urdf/: actuator.xacro  create_link.xacro  robot.urdf  robot.xacro  robot_description.urdf.xacro
src/TechControlInterface/hardware/: TechHardware.cpp  TechInterface.cpp
src/TechControlInterface/hardware/include/: TechHardware.hpp  TechInterface.hpp
src/TechControlInterface/meshes/: base_link.STL  link0.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/TechControlInterface/urdf/: robot.urdf
src/UI/: CMakeLists.txt  package.xml
src/UI/include/: controller.h  mainwindow.h  switcher.h
src/UI/src/: controller.cpp  main.cpp  mainwindow.cpp  switcher.cpp
src/UI/ui/: mainwindow.ui
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: TechControlInterface.srdf  TechControlInterface.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
